@@ -14,8 +14,8 @@ i18n::set_locale('en_NZ');
 setlocale (LC_TIME, 'en_NZ@dollar', 'en_NZ.UTF-8', 'en_NZ', 'nz', 'nz');
 
 // * * * ECOMMERCE I18N SETTINGS
-EcommerceCurrency::setDecimalDelimiter(','); //for Money formating
-EcommerceCurrency::setThousandDelimiter('.'); //for Money formating
+EcommerceCurrency::setDecimalDelimiter('.'); //for Money formating
+EcommerceCurrency::setThousandDelimiter(','); //for Money formating
 Object::useCustomClass('SS_Datetime','I18nDatetime', true);
 
 // * * * SHOPPING CART AND ORDER
