@@ -6,6 +6,7 @@ TODO in 0.8.3
 	* Introduce order step pipeline system. Reconfigure how order fulfilment works.
 	* Upgrade Payment module
 	* Introduce buyable concept from trunk
+	* Split variations into submodule as per trunk
 	* Move docs, tests, diagrams to a different submodule??
 
 0.8.2
